# cookiecutter-django-api

./: .gitignore  .pre-commit-config-for-gen.yaml  .pre-commit-config.yaml  README.md  cookiecutter.json  db.sqlite3  manage.py  pyproject.toml
.github/workflows/: on_push_and_pr.yaml  publish_pypi.yaml
application/: settings.py
base/: decorators.py  exceptions.py  middleware.py  response.py  status_codes.py  views.py
base/file_handler/: parser.py
blog/: models.py  tests.py  urls.py  validators.py  views.py
blog/migrations/: 0001_initial.py  0002_post_published.py  0003_rename_post_blogs_alter_blogs_table.py  0004_remove_blogs_unique_post_and_more.py
example_app/: urls.py  views.py
hooks/: post_gen_project.py  pre_gen_project.py
icebear_site/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: copy_before_commit.sh  test_generation.sh
tests/: test_generation.sh
tests/test_base/: test_parser.py
{{cookiecutter.project_slug}}/: .gitignore  README.md  pyproject.toml  requirements.txt
{{cookiecutter.project_slug}}/base/: decorators.py  exceptions.py  filter_backends.py  middleware.py  models.py  response.py  utils.py  views.py
{{cookiecutter.project_slug}}/base/file_handler/: loader.py  parser.py
{{cookiecutter.project_slug}}/envs/: .env.base  .env.prod
{{cookiecutter.project_slug}}/example_app/: models.py  urls.py  views.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: asgi.py  settings.py  urls.py  wsgi.py
