[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
readme = "README.md"
packages = [{ include = "{{cookiecutter.project_slug}}" }]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
pydantic = "^2.1.1"
httpie = "^3.2.2"
rich = "^13.5.2"
coverage = "^7.3.0"
python-dotenv = "^1.0.0"
django-environ = "^0.11.2"
environs = "^10.3.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
ruff = "^0.1.14"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
