[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.author_email}}>"]
readme = "README.md"
packages = [{ include = "{{cookiecutter.project_slug}}" }]
[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"
pydantic = "^2.5.3"
rich = "^13.7.0"
environs = "^10.3.0"
dj-database-url = "^2.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
ruff = "^0.1.14"
isort = "^5.13.2"
httpie = "^3.2.2"
coverage = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
